<resources>
    <string name="app_name">02.1: Two Activities</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter your message here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>
