<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/button_main"
            android:onClick="launchSecondActivity"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/editText_main"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_main"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/editText_main"/>

    <TextView
            android:text="@string/text_header_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:id="@+id/text_header_reply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/text_message_reply"
            app:layout_constraintTop_toBottomOf="@+id/text_header_reply"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
</androidx.constraintlayout.widget.ConstraintLayout>